--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <header class="page-header">
+        <div class="container">
+            <a href="/" class="page-logo">
+                Sit <span>on</span> chair
+            </a>
+            <nav class="page-nav">
+                <ul class="page-nav-list">
+                    <li>
+                        <a href="">O firmie</a>
+                        <ul class="page-nav-sublist">
+                            <li><a href="">Aktualności</a></li>
+                            <li><a href="">Nasz team</a></li>
+                            <li><a href="">Historia</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="">Galeria</a>
+                    </li>
+                    <li>
+                        <a href="">Kontakt</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 </body>
 </html>
