--- a/index.html
+++ b/index.html
@@ -36,5 +36,26 @@
         </div>
     </header>
 
+    <section class="slider-bg">
+        <div class="container">
+            <div class="slider">
+                <button class="slider-prev">
+                    &lt;
+                </button>
+                <button class="slider-next">
+                    &gt;
+                </button>
+                <div class="slider-list">
+                    <div class="slider-slide active">
+                        slide 1
+                    </div>
+                    <div class="slider-slide">
+                        slide 2
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
