Add h1 to page header

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 <body>
     <header class="page-header">
         <div class="container">
-            <a href="/" class="page-logo">
-                Sit <span>on</span> chair
-            </a>
+            <h1 class="page-logo">
+               <a href="/" class="page-logo-link">
+                    Sit <span>on</span> chair
+                </a> 
+            </h1>
+            
             <nav class="page-nav">
                 <ul class="page-nav-list">
                     <li>
