Add contact form

--- a/index.html
+++ b/index.html
@@ -60,5 +60,47 @@
         </div>
     </section>
 
+    <section class="section section-price"></section>
+
+    <section class="section section-contact">
+        <div class="container">
+            <h2 class="section-title">
+                Kontakt
+            </h2>
+
+            <form class="form">
+                <div class="form-left">
+                    <div class="form-row">
+                        <label for="imie" class="form-label">Imię</label>
+                        <input class="form-control" type="text" id="imie" name="imie" placeholder="Imię">
+                    </div>
+                    <div class="form-row">
+                        <label for="email" class="form-label">Email</label>
+                        <input class="form-control" type="email" id="email" name="email" placeholder="Email">
+                    </div>
+                    <div class="form-row">
+                        <label for="msg" class="form-label">Wiadomość</label>
+                        <textarea class="form-control" id="msg" name="msg" placeholder="Wiadomość"></textarea>
+                    </div>
+                </div>
+                <div class="form-right">
+                    <div class="form-img"></div>
+                    <label class="form-checkbox">
+                        <input type="checkbox">
+                        <span>
+                            Zgadzam się na przetwarzanie danych osobowych
+                        </span>
+                    </label>
+                    <button type="submit" class="form-submit btn">
+                        Wyślij
+                    </button>
+                </div>
+            </form>
+
+
+
+        </div>
+    </section>
+
 </body>
 </html>
