Add price section & news section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,58 @@
         </div>
     </section>
 
-    <section class="section section-price"></section>
+    <section class="section section-news">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <article class="news">
+                        <img src="images/box1_img.jpg" alt="" class="news-img">
+                        <div class="news-bar">
+                            <h3 class="news-title">Chair CLAIR</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="col">
+                    <article class="news">
+                        <img src="images/box2_img.jpg" alt="" class="news-img">
+                        <div class="news-bar">
+                            <h3 class="news-title">Chair MARGARITA</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="col">
+                    <article class="news-box">
+                        <h3 class="news-title">More news</h3>
+                        <div class="news-text">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti repudiandae maxime sunt quam quia debitis atque, consectetur quas recusandae molestias sint! Amet minus veritatis ipsa. Fugit earum ipsa similique illo?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, a!</p>
+                        </div>
+                    </article>
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section section-price">
+        <div class="container">
+            <h2 class="section-title">
+                Cennik
+            </h2>
+            <div class="row">
+                <div class="col">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit architecto obcaecati, iure quia voluptate numquam modi nisi optio aliquam corrupti, esse reprehenderit sed molestiae eum maxime praesentium vel. Asperiores, provident, dolor cum voluptas eius laborum veniam hic atque modi officia itaque? Error, rem ullam vitae fuga eveniet at ipsa expedita necessitatibus assumenda debitis earum quam quis ut maxime dicta fugit dolorum hic illo maiores quibusdam. Et maxime omnis unde, adipisci quam ad quisquam aspernatur provident similique quaerat beatae labore a, quis soluta cupiditate? Saepe neque ut tempore temporibus quod ex mollitia, facilis eveniet, in quibusdam magni, molestias adipisci debitis nisi!
+                </div>
+                <div class="col">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit architecto obcaecati, iure quia voluptate numquam modi nisi optio aliquam corrupti, esse reprehenderit sed molestiae eum maxime praesentium vel. Asperiores, provident, dolor cum voluptas eius laborum veniam hic atque modi officia itaque? Error, rem ullam vitae fuga eveniet at ipsa expedita necessitatibus assumenda debitis earum quam quis ut maxime dicta fugit dolorum hic illo maiores quibusdam. Et maxime omnis unde, adipisci quam ad quisquam aspernatur provident similique quaerat beatae labore a, quis soluta cupiditate? Saepe neque ut tempore temporibus quod ex mollitia, facilis eveniet, in quibusdam magni, molestias adipisci debitis nisi!
+                </div>
+                <div class="col">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit architecto obcaecati, iure quia voluptate numquam modi nisi optio aliquam corrupti, esse reprehenderit sed molestiae eum maxime praesentium vel. Asperiores, provident, dolor cum voluptas eius laborum veniam hic atque modi officia itaque? Error, rem ullam vitae fuga eveniet at ipsa expedita necessitatibus assumenda debitis earum quam quis ut maxime dicta fugit dolorum hic illo maiores quibusdam. Et maxime omnis unde, adipisci quam ad quisquam aspernatur provident similique quaerat beatae labore a, quis soluta cupiditate? Saepe neque ut tempore temporibus quod ex mollitia, facilis eveniet, in quibusdam magni, molestias adipisci debitis nisi!
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <section class="section section-contact">
         <div class="container">
