--- a/index.html
+++ b/index.html
@@ -100,13 +100,64 @@
             </h2>
             <div class="row">
                 <div class="col">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit architecto obcaecati, iure quia voluptate numquam modi nisi optio aliquam corrupti, esse reprehenderit sed molestiae eum maxime praesentium vel. Asperiores, provident, dolor cum voluptas eius laborum veniam hic atque modi officia itaque? Error, rem ullam vitae fuga eveniet at ipsa expedita necessitatibus assumenda debitis earum quam quis ut maxime dicta fugit dolorum hic illo maiores quibusdam. Et maxime omnis unde, adipisci quam ad quisquam aspernatur provident similique quaerat beatae labore a, quis soluta cupiditate? Saepe neque ut tempore temporibus quod ex mollitia, facilis eveniet, in quibusdam magni, molestias adipisci debitis nisi!
+                    <div class="price-box">
+                        <h3 class="price-title">Basic plan</h3>
+                        <div class="price">
+                            <div class="price-numbers">
+                                <span>85</span><sup>99</sup>
+                            </div>
+                            <div class="price-letters">
+                                pln/msc
+                            </div>
+                        </div>
+                        <div class="price-option-list">
+                            <div class="price-option">Zakup towaru + dowóz</div>
+                            <div class="price-option">Serwis</div>
+                            <div class="price-option"></div>
+                            <div class="price-option"></div>  
+                        </div>
+                        <button class="btn price-btn">Dołącz</button>
+                    </div>
                 </div>
                 <div class="col">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit architecto obcaecati, iure quia voluptate numquam modi nisi optio aliquam corrupti, esse reprehenderit sed molestiae eum maxime praesentium vel. Asperiores, provident, dolor cum voluptas eius laborum veniam hic atque modi officia itaque? Error, rem ullam vitae fuga eveniet at ipsa expedita necessitatibus assumenda debitis earum quam quis ut maxime dicta fugit dolorum hic illo maiores quibusdam. Et maxime omnis unde, adipisci quam ad quisquam aspernatur provident similique quaerat beatae labore a, quis soluta cupiditate? Saepe neque ut tempore temporibus quod ex mollitia, facilis eveniet, in quibusdam magni, molestias adipisci debitis nisi!
+                    <div class="price-box suggested">
+                        <h3 class="price-title">Standard plan</h3>
+                        <div class="price">
+                            <div class="price-numbers">
+                                <span>95</span><sup>99</sup>
+                            </div>
+                            <div class="price-letters">
+                                pln/msc
+                            </div>
+                        </div>
+                        <div class="price-option-list">
+                            <div class="price-option">Zakup towaru + dowóz</div>
+                            <div class="price-option">Serwis</div>
+                            <div class="price-option standard">Gwarancja 5 lat</div>
+                            <div class="price-option"></div>  
+                        </div>
+                        <button class="btn price-btn">Dołącz</button>
+                    </div>
                 </div>
                 <div class="col">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit architecto obcaecati, iure quia voluptate numquam modi nisi optio aliquam corrupti, esse reprehenderit sed molestiae eum maxime praesentium vel. Asperiores, provident, dolor cum voluptas eius laborum veniam hic atque modi officia itaque? Error, rem ullam vitae fuga eveniet at ipsa expedita necessitatibus assumenda debitis earum quam quis ut maxime dicta fugit dolorum hic illo maiores quibusdam. Et maxime omnis unde, adipisci quam ad quisquam aspernatur provident similique quaerat beatae labore a, quis soluta cupiditate? Saepe neque ut tempore temporibus quod ex mollitia, facilis eveniet, in quibusdam magni, molestias adipisci debitis nisi!
+                    <div class="price-box">
+                            <h3 class="price-title">Advance plan</h3>
+                            <div class="price">
+                                <div class="price-numbers">
+                                    <span>211</span><sup>00</sup>
+                                </div>
+                                <div class="price-letters">
+                                    pln/msc
+                                </div>
+                            </div>
+                            <div class="price-option-list">
+                                <div class="price-option">Zakup towaru + dowóz</div>
+                                <div class="price-option">Serwis</div>
+                                <div class="price-option standard">Gwarancja 6 lat</div>
+                                <div class="price-option advance">Porady projektanta</div>  
+                            </div>
+                            <button class="btn price-btn">Dołącz</button>
+                        </div>
                 </div>
             </div>
         </div>
