--- a/index.html
+++ b/index.html
@@ -203,6 +203,28 @@
 
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-left">
+                <div class="footer-copyright">
+                Copyright 2014 | All Rights Reserved. - Sit On Chair
+            </div>
+            </div>
+            <div class="footer-right">
+                <div class="footer-socials">
+                    <a href=""><img src="images/flickr.png" alt="Flickr"></a>
+                    <a href=""><img src="images/vimeo.png" alt="Vimeo"></a>
+                    <a href=""><img src="images/pinterest.png" alt="Pinterest"></a>
+                    <a href=""><img src="images/twitter.png" alt="Twitter"></a>
+                </div> 
+                <div class="footer-logo">
+                    <a href="/" class="footer-logo-link">
+                        Sit <span>on</span> chair
+                    </a> 
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
