Add content to slide 1

--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!doctype html>
 <html lang="pl">
+
 <head>
     <meta charset="utf-8">
     <title>SitOnChair</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700&display=swap&subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700&display=swap&subset=latin-ext"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+
     <header class="page-header">
         <div class="container">
             <h1 class="page-logo">
-               <a href="/" class="page-logo-link">
+                <a href="/" class="page-logo-link">
                     Sit <span>on</span> chair
-                </a> 
+                </a>
             </h1>
-            
+
             <nav class="page-nav">
                 <ul class="page-nav-list">
                     <li>
@@ -50,7 +54,18 @@
                 </button>
                 <div class="slider-list">
                     <div class="slider-slide active">
-                        slide 1
+                        <img src="images/black_chair.png" alt="Black chair" class="slide-img">
+                        <div class="slide-info">
+                            <h3 class="slide-title">
+                                Sit <span>on</span> our <span>chair</span>
+                            </h3>
+                            <div class="slide-text">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore qui obcaecati illum
+                                quaerat architecto numquam repellat ad quo. Consequuntur quam beatae necessitatibus? Nam cum
+                                totam rem, quos iste eaque officiis?
+                            </div>
+                            <button class="btn slide-btn">Zobacz więcej</button>
+                        </div>
                     </div>
                     <div class="slider-slide">
                         slide 2
@@ -83,11 +98,13 @@
                     <article class="news-box">
                         <h3 class="news-title">More news</h3>
                         <div class="news-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti repudiandae maxime sunt quam quia debitis atque, consectetur quas recusandae molestias sint! Amet minus veritatis ipsa. Fugit earum ipsa similique illo?</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti repudiandae maxime
+                                sunt quam quia debitis atque, consectetur quas recusandae molestias sint! Amet minus
+                                veritatis ipsa. Fugit earum ipsa similique illo?</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, a!</p>
                         </div>
                     </article>
-                    
+
                 </div>
             </div>
         </div>
@@ -114,7 +131,7 @@
                             <div class="price-option">Zakup towaru + dowóz</div>
                             <div class="price-option">Serwis</div>
                             <div class="price-option"></div>
-                            <div class="price-option"></div>  
+                            <div class="price-option"></div>
                         </div>
                         <button class="btn price-btn">Dołącz</button>
                     </div>
@@ -134,30 +151,30 @@
                             <div class="price-option">Zakup towaru + dowóz</div>
                             <div class="price-option">Serwis</div>
                             <div class="price-option standard">Gwarancja 5 lat</div>
-                            <div class="price-option"></div>  
+                            <div class="price-option"></div>
                         </div>
                         <button class="btn price-btn">Dołącz</button>
                     </div>
                 </div>
                 <div class="col">
                     <div class="price-box">
-                            <h3 class="price-title">Advance plan</h3>
-                            <div class="price">
-                                <div class="price-numbers">
-                                    <span>211</span><sup>00</sup>
-                                </div>
-                                <div class="price-letters">
-                                    pln/msc
-                                </div>
+                        <h3 class="price-title">Advance plan</h3>
+                        <div class="price">
+                            <div class="price-numbers">
+                                <span>211</span><sup>00</sup>
                             </div>
-                            <div class="price-option-list">
-                                <div class="price-option">Zakup towaru + dowóz</div>
-                                <div class="price-option">Serwis</div>
-                                <div class="price-option standard">Gwarancja 6 lat</div>
-                                <div class="price-option advance">Porady projektanta</div>  
+                            <div class="price-letters">
+                                pln/msc
                             </div>
-                            <button class="btn price-btn">Dołącz</button>
                         </div>
+                        <div class="price-option-list">
+                            <div class="price-option">Zakup towaru + dowóz</div>
+                            <div class="price-option">Serwis</div>
+                            <div class="price-option standard">Gwarancja 6 lat</div>
+                            <div class="price-option advance">Porady projektanta</div>
+                        </div>
+                        <button class="btn price-btn">Dołącz</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -203,12 +220,13 @@
 
         </div>
     </section>
+
     <footer class="footer">
         <div class="container">
             <div class="footer-left">
                 <div class="footer-copyright">
-                Copyright 2014 | All Rights Reserved. - Sit On Chair
-            </div>
+                    Copyright 2014 | All Rights Reserved. - Sit On Chair
+                </div>
             </div>
             <div class="footer-right">
                 <div class="footer-socials">
@@ -216,15 +234,16 @@
                     <a href=""><img src="images/vimeo.png" alt="Vimeo"></a>
                     <a href=""><img src="images/pinterest.png" alt="Pinterest"></a>
                     <a href=""><img src="images/twitter.png" alt="Twitter"></a>
-                </div> 
+                </div>
                 <div class="footer-logo">
                     <a href="/" class="footer-logo-link">
                         Sit <span>on</span> chair
-                    </a> 
+                    </a>
                 </div>
             </div>
         </div>
     </footer>
 
 </body>
+
 </html>
