--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
             </div>
             <div class="footer-right">
                 <div class="footer-socials">
-                    <a href=""><img src="images/flickr.png" alt="Flickr"></a>
-                    <a href=""><img src="images/vimeo.png" alt="Vimeo"></a>
-                    <a href=""><img src="images/pinterest.png" alt="Pinterest"></a>
-                    <a href=""><img src="images/twitter.png" alt="Twitter"></a>
+                    <a href="https://www.flickr.com/explore" target="_blank"><img src="images/flickr.png" alt="Flickr"></a>
+                    <a href="https://vimeo.com/" target="_blank"><img src="images/vimeo.png" alt="Vimeo"></a>
+                    <a href="https://pl.pinterest.com/" target="_blank"><img src="images/pinterest.png" alt="Pinterest"></a>
+                    <a href="https://twitter.com/?lang=pl" target="_blank"><img src="images/twitter.png" alt="Twitter"></a>
                 </div>
                 <div class="footer-logo">
                     <a href="/" class="footer-logo-link">
