Changes in navigation

--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
             <nav class="page-nav">
                 <ul class="page-nav-list">
                     <li>
-                        <a href="">O firmie</a>
+                        <a href="">Oferta</a>
                         <ul class="page-nav-sublist">
-                            <li><a href="">Aktualności</a></li>
-                            <li><a href="">Nasz team</a></li>
-                            <li><a href="">Historia</a></li>
+                            <li><a href="">Krzesła</a></li>
+                            <li><a href="">Fotele</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="">Galeria</a>
+                        <a href="#prices">Cennik</a>
                     </li>
                     <li>
-                        <a href="">Kontakt</a>
+                        <a href="#contact">Kontakt</a>
                     </li>
                 </ul>
             </nav>
@@ -110,7 +109,7 @@
         </div>
     </section>
 
-    <section class="section section-price">
+    <section class="section section-price" id="prices">
         <div class="container">
             <h2 class="section-title">
                 Cennik
@@ -181,7 +180,7 @@
 
     </section>
 
-    <section class="section section-contact">
+    <section class="section section-contact" id="contact">
         <div class="container">
             <h2 class="section-title">
                 Kontakt
